cm-86 import data

--- a/src/app/styles/global.scss
+++ b/src/app/styles/global.scss
@@ -1,4 +1,7 @@
 :root {
+    --danger-color: #e76f51;
+    --danger-invert-color: #ffffff;
+    --danger-hover-color: #c9302c;
     --font-family: 'Inter', sans-serif;
     --letter-spacing: -0.03em;
     --font-size-mini: 12px;
