--- a/src/shared/ui/Button/Button.module.scss
+++ b/src/shared/ui/Button/Button.module.scss
@@ -18,6 +18,11 @@
     }
 }
 
+.size_s {
+    padding: 0.25rem 1rem;
+    font-size: var(--font-s);
+}
+
 .size_m {
     padding: 0.5rem 1.5rem;
 }
@@ -37,6 +42,15 @@
 
     &:hover {
         background-color: var(--primary-variant-bg-hover-color);
+    }
+}
+
+.danger {
+    background-color: var(--danger-color);
+    color: var(--danger-invert-color);
+
+    &:hover {
+        background-color: var(--danger-hover-color);
     }
 }
 
